# openscm-zenodo

./: .bandit.yml  .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  mkdocs.yml  primap-zenodo-description-modified.html  pyproject.toml  pytest.ini  requirements-docs-locked.txt  requirements-locked.txt  requirements-only-tests-locked.txt  requirements-only-tests-min-locked.txt  requirements-upstream-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci-cd-workflow.yml  ci.yaml  deploy.yaml  install-pypi.yaml  release.yaml  test-conda-install.yml  test-pypi-install.yml  test-upstream-latest.yaml
changelog/: 10.feature.md  10.trivial.md  11.trivial.md  12.feature.md  12.improvement.md  13.feature.md  14.trivial.md  15.feature.md  16.trivial.md  17.breaking.md  17.docs.md  17.improvement.md  17.trivial.md  8.trivial.md  9.trivial.md  README.md
docs/: NAVIGATION.md  changelog.md  development.md  gen_doc_stubs.py  installation.md
docs/cli/: index.md
docs/further-background/: dependency-pinning-and-testing.md
docs/how-to-guides/: basic-calculation.md  how-to-upload-to-zenodo.py  index.md  run-code-in-a-notebook.py
docs/source/: cli.rst  conf.py  development.rst  index.rst  uploading.rst  usage.rst  zenodo.rst
docs/source/_templates/: layout.html
scripts/: changelog-to-release-template.py  drive-primap-demo.sh  extract-primap.py  grab-primap.py  test-install.py  test_install.py  write-primap-modified.py
src/openscm_zenodo/: __init__.py  _version.py  cli.py  logging.py  uploading.py  zenodo.py
src/openscm_zenodo/cli/: __init__.py  app.py
tests/: conftest.py  test_zenodo.py
tests/integration/: test_cli.py  test_cli_entry_points.py  test_cli_integration.py  test_flow.py
tests/test-data/: test-deposit-metadata-no-description.json  test-deposit-metadata.json
tests/test-data/sub-dir/: file-in-sub-dir.txt
tests/unit/: test_cli_unit.py  test_operations.py  test_zenodo_unit.py
